Update on Overleaf.

--- a/body.tex
+++ b/body.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
 
 % Motivate need for new process
-The standard method of producing ammonia at industrial scale is through the thermochemical synthesis with the well-known Haber-Bosch process \cite{Schloegl_2003}. This process transformed the global fertilizer industry during the early 1900's, and is a critical enabler of the continued expansion of human population \cite{Smil_1999} -- N-fertilizers are estimated to feed half of the global population \cite{Zhang_2015}. The Haber-Bosch process is an impressive feat of modern chemical engineering, producing 140 million (Fig. \ref{fig:ammonia_prod}) tonnes of ammonia per year at a thermochemical efficiency of up to 70\% \cite{Schloegl_2003,Schiffer_2017}. However, the process also has downsides. The scale of the process leads massive energy consumption of 2.5 exajoule per year, with the hydrogen feedstock typically obtained via the methane reforming reaction \cite{Abbas_2010}, leading to a carbon footprint of 340 million tonnes of CO$_2$ equivalent per year. This is the highest carbon impact of any commodity chemical \cite{Schiffer_2017}. Furthermore, the high temperatures ($\sim$700 K) and pressures ($\sim$100 bar) lead to substantial capital and operational costs. The economies of scale for these costs favor large plants and highly centralized production with $<$100 plants worldwide with an average capacity of 2200 tonnes day$^{-1}$ \cite{McArthur_2017, Bartels}. This is in contrast to the dispersed use of ammonia-based fertilizers globally (Fig. \ref{fig:usemap}), which results in high transportation costs and additional carbon emissions \cite{West_2002}. This is particularly relevant and impactful in remote locations such as in sub-Saharan Africa, where soils are often nutrient limited due to low or no access to fertilizer by smallholder or poor resource farmers \cite{Gilbert_2012, Mueller_2012, VanderVelde2014, Liu2016}, leading to Africa having significantly lower usage of fertilizer compared to other regions (see \ref{fig:ammonia_prod}b). While global hunger has historically decreased with ammonia production, this trend has recently reversed (Fig. \ref{fig:ammonia_prod}a), suggesting that current practices prevent produced ammonia from reaching the agricultural areas where it is most necessary. The opposite problem of over fertilization also has a negative environmental impact in more developed regions due to the periodic application of higher rates of concentrated fertilizers that cause nitrate pollution through leaching into waterways, causing vast ocean ``dead zones'' \cite{Diaz2008, Stevens_2019} as well as high emissions of gaseous nitrous oxide that contribute to climate change. Finally, the intense conditions and reactive nature of concentrated ammonia-based fertilizer lead to safety and national security concerns, as evidenced by explosions at fertilizer plants and the common use of fertilizers in makeshift explosives \cite{Marlair_2005}.
+The standard method of producing ammonia at industrial scale is through the thermochemical synthesis with the well-known Haber-Bosch process \cite{Schloegl_2003}. This process transformed the global fertilizer industry during the early 1900's, and is a critical enabler of the continued expansion of human population \cite{Smil_1999} -- N-fertilizers are estimated to feed half of the global population \cite{Zhang_2015}. The Haber-Bosch process is an impressive feat of modern chemical engineering, producing 140 million (Fig. \ref{fig:ammonia_prod}) tonnes of ammonia per year at a thermochemical efficiency of up to 70\% \cite{Schloegl_2003,Schiffer_2017}. However, the process also has downsides. The scale of the process leads massive energy consumption of 2.5 exajoule per year, with the hydrogen feedstock typically obtained via the methane reforming reaction \cite{Abbas_2010}, leading to a carbon footprint of 340 million tonnes of CO$_2$ equivalent per year. This is the highest carbon impact of any commodity chemical \cite{Schiffer_2017}. Furthermore, the high temperatures ($\sim$700 K) and pressures ($\sim$100 bar) lead to substantial capital and operational costs. The economies of scale for these costs favor large plants and highly centralized production with $<$100 plants worldwide with an average capacity of 2200 tonnes day$^{-1}$ \cite{McArthur_2017, Bartels}. This is in contrast to the dispersed use of ammonia-based fertilizers globally (Fig. \ref{fig:usemap}), which results in high transportation costs and additional carbon emissions \cite{West_2002}. This is particularly relevant and impactful in remote locations such as in sub-Saharan Africa, where soils are often nutrient limited due to low or no access to fertilizer by smallholder or poor resource farmers \cite{Gilbert_2012, Mueller_2012, VanderVelde2014}, leading to Africa having significantly lower usage of fertilizer compared to other regions (see \ref{fig:ammonia_prod}b). While global hunger has historically decreased with ammonia production, this trend has recently reversed (Fig. \ref{fig:ammonia_prod}a), suggesting that current practices prevent produced ammonia from reaching the agricultural areas where it is most necessary. The opposite problem of over fertilization also has a negative environmental impact in more developed regions due to the periodic application of higher rates of concentrated fertilizers that cause nitrate pollution through leaching into waterways, causing vast ocean ``dead zones'' \cite{Diaz2008, Stevens_2019} as well as high emissions of gaseous nitrous oxide that contribute to climate change. Finally, the intense conditions and reactive nature of concentrated ammonia-based fertilizer lead to safety and national security concerns, as evidenced by explosions at fertilizer plants and the common use of fertilizers in makeshift explosives \cite{Marlair_2005}.
 
 \begin{figure}
     \centering
@@ -66,12 +66,11 @@ In this paper we identify key considerations and performance targets for the pho
 
 Current fertilizer production relies on the Haber-Bosch process, with highly centralized production and fewer than 100 production plants globally \cite{McArthur_2017} to cater to 1.55 billion hectares of arable land and permanent crops (about 12\% of total land area) \cite{FAOSTAT_2018} and an estimated 500 million farms \cite{FAO_2014,Lowder_2016}. The centralized production is driven primarily by the harsh reaction conditions of the process. The high temperature and particularly the pressure of the process lead to a favorable economy of scale, with a typical capacity scaling exponent of 0.7 \cite{Ullmann_amm_2006, Berthouex_1972}. This incentivizes high-volume production with high capital investment, with the most recent 2200 tonne day$^{-1}$ fertilizer plant having a capital cost of \$1.5 billion \cite{northern_plains_2013}. This leads to long payback periods, and encourages development of production facilities in regions with stable access to feedstock such as natural gas, reliable infrastructure, stable governance, and sophisticated financial systems \cite{McArthur_2017} as indicated by the presence of ammonia production primarily in developed regions (Fig. \ref{fig:usemap}). The resulting fertilizer products with high nutrient concentration must be transported to globally dispersed agricultural production centers. 
 
-Fertilizer use in developing countries has been encouraged due to a significant depletion in soil nutrients. However, for the use of fertilizers to be economically viable and sustainable, they must produce a significant increase in yield. This is typically quantified by the ``value-cost ratio'' (VCR), which in this case is the ratio of crop output value to fertilizer input cost. As a rule-of-thumb, farmers will invest and use fertilizer if the VCR is greater than $\sim$2, indicating that for every dollar invested in fertilizer, output revenues will repay the invested dollar plus an additional dollar, for a 100\% return on investment. As shown in Fig. \ref{fig:vcr} for selected crops the VCR is generally increased as the price of fertilizer decreases \cite{sommer_2013}; however, the prospect of much lower fertilizer prices would clearly incentivize fertilizer use by increasing the VCR, assuming constant or no downward changes in agricultural output prices. It is important that these economic incentives hold for small ($<$ 1 ha) farms, since $>$70\% of farms globally are small (Fig. \ref{fig:vcr}b), and the proportion is higher in developing countries \cite{Lowder_2016}. This section briefly explores the implications of the centralized Haber-Bosch process on the economics of fertilizer production, and explores the potential impact and challenges of decentralized production of dilute fertilizers in both developed and developing regions.
+Fertilizer use in developing countries has been encouraged due to a significant depletion in soil nutrients. However, for the use of fertilizers to be economically viable and sustainable, they must produce a significant increase in yield. This is typically quantified by the ``value-cost ratio'' (VCR), which in this case is the ratio of crop output value to fertilizer input cost. As a rule-of-thumb, farmers will invest and use fertilizer if the VCR is greater than $\sim$2, indicating that for every dollar invested in fertilizer, output revenues will repay the invested dollar plus an additional dollar, for a 100\% return on investment. As shown in Fig. \ref{fig:vcr} for selected crops the VCR is generally increased as the price of fertilizer decreases \cite{sommer_2013}; however, the prospect of much lower fertilizer prices or higher fertilizer efficiency would clearly incentivize fertilizer use by increasing the VCR, assuming constant or no downward changes in agricultural output prices. It is important that these economic incentives hold for small ($<$ 1 ha) farms, since $>$70\% of farms globally are small (Fig. \ref{fig:vcr}b), and the proportion is higher in developing countries \cite{Lowder_2016}. This section briefly explores the implications of the centralized Haber-Bosch process on the economics of fertilizer production, and explores the potential impact and challenges of decentralized production of dilute fertilizers in both developed and developing regions.
 \begin{figure}
     \centering
-    \includegraphics[width=.8\textwidth]{Figures/value_cost_ratio_farm_size.pdf}
-    \caption{(a) Value-cost ratio (VCR) in response to the ratio of unit fertilizer price to unit crop price (PF/PY) for
-three different levels of fertilizer response (kg yield [Y] per kg Fertilizer [F]; blue curves) \cite{sommer_2013} (reproduced from \cite{Lowder_2016}) and (b) proportions of farms with various sizes.}
+    \includegraphics[width=.9\textwidth]{Figures/VCR_farmsize.pdf}
+    \caption{(a) Value-cost ratio (VCR) in response to the ratio of unit fertilizer price to unit crop price and fertilizer efficiency (measured as additional unit of crop per unit of fertilizer applied) \cite{sommer_2013}. Typical fertilizer-to-crop price ratios are denoted for rice, wheat, and maize, and minimum/typical VCR required for investment are shown by dashed/solid horizontal lines. (b) Proportions of farms with various sizes \cite{Lowder_2016}.}
     \label{fig:vcr}
 \end{figure}
 
@@ -101,7 +100,7 @@ The hazardous nature of ammonia also leads to challenges with transportation and
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.7\textwidth]{Figures/africa_costs.png}
+    \includegraphics[width=0.7\textwidth]{Figures/africa_prices.pdf}
     \caption{Overview of current (2019) commercial and subsidized costs of fertilizers in various African countries compared to the international free on board (FOB) cost \cite{africafertilizer_2018}.}
     \label{fig:africa_costs}
 \end{figure}
@@ -315,7 +314,7 @@ Another practical consideration is the time required to generate the solar ferti
 100 \frac{kg_N}{ha . yr} \times \frac{10^3}{14} \frac{mol_{N}}{kg_N} \times \frac{1}{8760} \frac{yr}{hr} \times \frac{10^6}{100} \frac{mol_{H_2O}}{mol_{N}} \times \frac{1}{55.4} \frac{L}{mol_{H_2O}} = 147 \frac{L}{hr . ha} 
 }
 \end{equation}
-Converting this volumetric flux to a space-time requires the volume of the reactor. In the case of photocatalysis the reactor area is given roughly by the solar capture area, which will be 100 m$^2$ ha$^{-1}$ assuming 1\% of land is dedicated to solar capture. The reactor height will be determined by the optical penetration, which depends on the catalyst loading and scattering properties. However, a depth of 1-10 cm is reasonable, yielding a reactor volume of 1000 - 10,000 L ha$^{-1}$ and a residence time of around 7 - 70 hours. In the case of electrochemical conversion the reactor volume will be independent of solar capture area, and will likely be smaller in general. Given the dependence of residence time on reactor design, the volumetric flux provides a better metric for comparing process performance. Assuming that 1\% of land will be used for solar captuer and converting the volumetric flux from 147 L hr$^{-1}$ ha$^{-1}$ to more convenient lab-scale units yields a target volumetric flux of 150 $\mu$L cm$^{-2}_{illum}$ hr$^{-1}$. The volumetric flux can be computed with the following formula:
+Converting this volumetric flux to a space-time requires the volume of the reactor. In the case of photocatalysis the reactor area is given roughly by the solar capture area, which will be 100 m$^2$ ha$^{-1}$ assuming 1\% of land is dedicated to solar capture. The reactor height will be determined by the optical penetration, which depends on the catalyst loading and scattering properties. However, a depth of 1-10 cm is reasonable, yielding a reactor volume of 1000 - 10,000 L ha$^{-1}$ and a residence time of around 7 - 70 hours. In the case of electrochemical conversion the reactor volume will be independent of solar capture area, and will likely be smaller in general. Given the dependence of residence time on reactor design, the volumetric flux per illumination area provides a better metric for comparing process performance. Assuming that 1\% of land will be used for solar capture and converting the volumetric flux from 147 L hr$^{-1}$ ha$^{-1}$ to more convenient lab-scale units yields a target volumetric flux per illumination area of 150 $\mu$L cm$^{-2}_{illum}$ hr$^{-1}$. The volumetric flux per illumination area measured from experiment can be computed with the following formula:
 
 \begin{equation}
 \mathrm{
@@ -323,11 +322,13 @@ Q_{fertilizer} = \frac{V_{fertilizer}}{t_{rxn} A_{illum}}
 }
 \label{eq:flux}
 \end{equation}
-where $Q_{fertilizer}$ is the flux of effluent with sufficient nutrient concentration to be a fertilizer (suggested initial target is 100 ppm), $V_{fertilizer}$ is the volume of the effluent after the experiment, and all other variables are defined in Eq. \ref{eq:chem_eff}. While this equation only applies directly to photocatalysis it can also be adapted to electrocatalysis by estimating the area of conventional photovoltaics needed to provide the electrical energy and substituting this as $A_{illum}$. This will depend on the overpotentials of both half-reactions, as well as the area of the electrode:
+where $Q_{fertilizer}$ is the volumetric flux per illumination area, $V_{fertilizer}$ is the volume of the effluent with sufficient nutrient concentration to be a fertilizer after the experiment (suggested initial target is 100 ppm), and all other variables are defined in Eq. \ref{eq:chem_eff}. While this equation only applies directly to photocatalysis it can also be adapted to electrocatalysis by estimating the area of conventional photovoltaics needed to provide the electrical energy and substituting this as $A_{illum}$. This will depend on the overpotentials of both half-reactions, as well as the area of the electrode and Faradaic efficiency:
 \begin{equation}
-    \tilde{A}_{illum} = \frac{i \times (V_{applied})}{\eta_{PV} \times J_{solar}}
+    \tilde{A}_{illum} = \frac{i_{NH_3} \times (V_{applied})}{\eta_{PV} \times \eta_F \times J_{solar}}
 \end{equation}
-where $\tilde{A}_{illum}$ is the effective illumination area, $i$ is the applied current, $V_{applied}$ is the applied potential (including both reductive and oxidative overpotentials), $\eta_{PV}$ is the photovoltaic cell efficiency (typically 20\%) and $J_{solar}$ is the solar flux (typically 1000 W m$^{-2}$). For example, assuming the target current density of 1 mA cm$^{-2}$, an overpotential of 1.15 V for nitrogen reduction \cite{Song_2018} and 0.45 V for OER yields an effective illumination area of 0.14 cm$^2_{illum}$cm$^{-2}_{electrode}$, and a target volumetric flux of 20 $\mu$L cm$^{-2}_{electrode}$ hr$^{-1}$. The volumetric flux is not currently reported for any photo(electro)catalytic nitrogen fixation experiments, and cannot be calculated since reactor volumes are not typically reported. It is expected that the relatively large reactor volumes used in most experiments prevents the concentration from ever reaching the target of 100 ppm, and most reported concentration are in the $\mu$molar regime \cite{Hirakawa_2017,Medford_2017}. However, specialized reactor designs with higher surface area to volume ratios may enable experiments where the volumetric flux can be measured; a similar strategy enabled measurement of minor products for electrochemical CO$_2$ reduction \cite{Kuhl_2012}. Another advantage of this type of experiment is that the relatively large resulting ammonia concentration will overcome the many issues with ammonia quantification \cite{Greenlee_2018,Gao_2018,Zhao_2019,Cui_2018,Suryanto_2019}, and should even be qualitatively detectable by odor. Demonstrating the production of a prototype solar fertilizer, even at a very small scale, represents an important step toward solar fertilizer development.
+where $\tilde{A}_{illum}$ is the effective illumination area, $i_{NH_3}$ is the current producing ammonia, $V_{applied}$ is the applied potential (including both reductive and oxidative overpotentials), $\eta_{PV}$ is the photovoltaic cell efficiency (typically 20\%), $\eta_{F}$ is the Faradaic efficiency toward ammonia, and $J_{solar}$ is the solar flux (typically 300 W m$^{-2}$). For example, assuming the target current density of 5 mA cm$^{-2}$, a Faradaic efficiency of 10\% at an overpotential of 1.15 V for nitrogen reduction \cite{Song_2018} and 0.45 V for OER yields an effective illumination area of 23 cm$^2_{illum}$cm$^{-2}_{electrode}$. 
+
+The volumetric flux is not currently reported for any photo(electro)catalytic nitrogen fixation experiments, and cannot be calculated since reactor volumes are not typically reported. It is expected that the relatively large reactor volumes used in most experiments prevents the concentration from ever reaching the target of 100 ppm, and most reported concentration are in the $\mu$molar regime \cite{Hirakawa_2017,Medford_2017}. However, specialized reactor designs with higher surface area to volume ratios may enable experiments where the volumetric flux can be measured; a similar strategy enabled measurement of minor products for electrochemical CO$_2$ reduction \cite{Kuhl_2012}. Another advantage of this type of experiment is that the relatively large resulting ammonia concentration will overcome the many issues with ammonia quantification \cite{Greenlee_2018,Gao_2018,Zhao_2019,Cui_2018,Suryanto_2019}, and should even be qualitatively detectable by odor. Demonstrating the production of a prototype solar fertilizer, even at a very small scale, represents an important step toward solar fertilizer development.
 
 Finally, we note that it is also important to report and control the conditions under which the metrics are measured. Some key variables are the type of illumination, the atmosphere or reactants used, the properties of the electrolyte or solution used. For photo(electro)catalysis solar efficiency should be measured with an AM1.5 solar simulator rather than xenon or mercury lamps with high UV content \cite{AM_1.5}, which is standard in the photovoltaics community. We also propose a ``standard atmospheric'' test for photocatalysis where the reaction is run in air with distilled water. This standard test will provide an important control experiment, can act as a common reference for comparing the performance of various photocatalysts, and will provide an estimate of the ``energy per utilizable nitrogen'' since no upstream or downstream processing would be required. In the case of electrochemistry it is more difficult to prescribe a standard test since electrolytes are always required and have been shown to have a considerable effect on nitrogen fixation activity \cite{Song_2018,Zhou_2017,Sheets_2018,Cui_2018}. However, it is still useful to consider the robustness of the process to air, and we recommend reporting the activity with air as a feedstock to assess the need for upstream air separations. Assessing stability and measuring turnover number has also been identified as an important metric that will help establish how robust catalysts are under operation \cite{Suryanto_2019}. Another critically important consideration is the standardization of how nutrient concentrations are measured. Quantification of ammonia at low concentrations has been identified as a challenge due to issues with contamination and calibration \cite{Greenlee_2018,Gao_2018,Zhao_2019,Cui_2018,Suryanto_2019}, and similar challenges are expected for nitrates or other nutrients. This issue is beyond the scope of this work, but establishing standards for both experimental testing conditions and quantification practices will facilitate comparison of results and accelerate the development of photo(electro)catalytic processes for solar fertilizer production.
 
