Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -2647,3 +2647,17 @@ abstract  ="Direct electrochemical synthesis of ammonia is proposed as a means o
 	title = {Assessment of a Sustainable Electrochemical Ammonia Production System Using Photoelectrochemically Produced Hydrogen under Concentrated Sunlight},
 	journal = {{ACS} Sustainable Chemistry {\&} Engineering}
 }
+
+
+@article{Michalsky_2015,
+	doi = {10.1039/c5sc00789e},
+	url = {https://doi.org/10.1039%2Fc5sc00789e},
+	year = 2015,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {6},
+	number = {7},
+	pages = {3965--3974},
+	author = {R. Michalsky and A. M. Avram and B. A. Peterson and P. H. Pfromm and A. A. Peterson},
+	title = {Chemical looping of metal nitride catalysts: low-pressure ammonia synthesis for energy storage},
+	journal = {Chemical Science}
+}
